--- a/Q.no.3-Tahjeeb-20A2HP437.ipynb
+++ b/Q.no.3-Tahjeeb-20A2HP437.ipynb
@@ -21,7 +21,7 @@
         "id": "BgUZVRpcQvOE"
       },
       "source": [
-        "Q.3 Saksham Tiwari 20A2HP422"
+        "Q.3 Tahjeeb Saikia 20A2HP437"
       ]
     },
     {
